# argumento

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
config_args/: parser.py
src/argumento/: namespace_dict.py  parsers.py
src/config_args/: __init__.py  parsers.py
tests/: test_config_args.py  test_namespace_dict.py  test_parsers.py
tests/data/: env.json  env.toml  env.yaml  env.yml  flat.json  flat.toml  flat.yaml  flat.yml  flat_cmd_only.json  flat_cmd_only.toml  flat_cmd_only.yml  hierarch.json  hierarch.toml  hierarch.yaml  hierarch.yml  hierarch_cmd.toml
tests/test_config_args/: test_factory.py  test_parsers.py
